remove legacy endpoints and add a getAll for the notifications.
